fix: isBlank()->trim().isEmpty()
- JAVA8에서는 isBlank()를 지원하지 않기에 이를 대신하기 위하여 trim().isEmpty() 로 변경 (isBlank()=11부터)